# POO_Project

./: CMakeLists.txt  README.md
src/: class.cpp  main.cpp  test
src/kanji_app_C++/: CMakeLists.txt  converter.cpp  jlpt_listas.json  kanji_no_romaji.json  kanjis1.json  main.cpp  schedule.json  separador.cpp
v2/: CMakeLists.txt  README.md
v2/include/: card.hpp  deck.hpp  json_helper.hpp  kanji_card.hpp  reviewable.hpp  study_session.hpp  vocabulary_card.hpp
v2/src/: card.cpp  deck.cpp  json_helper.cpp  kanji_card.cpp  main.cpp  study_session.cpp  vocabulary_card.cpp
v2/tests/: test_tp2.cpp
